--- a/paul.html
+++ b/paul.html
@@ -8,3 +8,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
+<body>
+<div class="card">
+<img src="ortrait.png" alt="Nate" stylh:100%">
+/h1>
+<p class="title">Student at Eleven Fifty Academy </p>
+a href="#"><i class="fa fa></a>
+<a href="#"><i class="fa fa-linkedin">/a>
+<a href="#"><i class="fa fa-facebook"></ibutton>Contact</button></p>
+</div>
+</body>
+</html>
