--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     
 <h1>Master Branch</h1>
-<a href="nathan.html"> Nathan Ho</a>
-<a href="">Paul Grayson</a>
-<a href=""> Chris Hunt</a>
-
+<ul>
+<LI><a href="nathan.html"> Nathan Ho</a></LI>
+<li><a href="chris.html"> Chris</a></LI>
+<LI><a href="paul.html"> Paul</a></LI>
+</ul>
 </body>
 </html>
