--- a/paul.html
+++ b/paul.html
@@ -13,7 +13,7 @@
 <img src="ortrait.png" alt="Nate" stylh:100%">
 /h1>
 <p class="title">Student at Eleven Fifty Academy </p>
-a href="#"><i class="fa fa></a>
+<a href="#"><i class="fa fa></a>
 <a href="#"><i class="fa fa-linkedin">/a>
 <a href="#"><i class="fa fa-facebook"></ibutton>Contact</button></p>
 </div>
