--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
 <h1>Master Branch</h1>
 <h2>Develop Branch</h2>
-<a href="nathan.html"> Nathan Ho</a>
-<a href="">Paul Grayson</a>
-<a href=""> Chris Hunt</a>
+<li><a href="nathan.html"> Nathan Ho</a></li>
+<li><a href="chris.html"> Chris Hunt</a></li>
+<li><a href="paul.html"> Paul Grayson</a></li>
 
 </body>
 </html>
